welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var ado:Int
            ^